--- a/test/e2e/config/docker.yaml
+++ b/test/e2e/config/docker.yaml
@@ -35,7 +35,7 @@ providers:
 - name: cluster-api
   type: CoreProvider
   versions:
-  - name: "{go://sigs.k8s.io/cluster-api@v0.3}" # latest published release in the v1alpha3 series; this is used for v1alpha3 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.3}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.3}/core-components.yaml"
     type: "url"
     contract: v1alpha3
@@ -44,7 +44,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.3/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v0.4}" # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.4}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.4}/core-components.yaml"
     type: "url"
     contract: v1alpha4
@@ -53,7 +53,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.4/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.0}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.0}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.0}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -62,7 +62,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -71,7 +71,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -80,7 +80,7 @@ providers:
       new: --metrics-addr=:8080
     files:
       - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -89,7 +89,7 @@ providers:
         new: --metrics-addr=:8080
     files:
       - sourcePath: "../data/shared/v1.7/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.8}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.8}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.8}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -109,7 +109,7 @@ providers:
 - name: kubeadm
   type: BootstrapProvider
   versions:
-  - name: "{go://sigs.k8s.io/cluster-api@v0.3}" # latest published release in the v1alpha3 series; this is used for v1alpha3 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.3}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.3}/bootstrap-components.yaml"
     type: "url"
     contract: v1alpha3
@@ -118,7 +118,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.3/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v0.4}" # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.4}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.4}/bootstrap-components.yaml"
     type: "url"
     contract: v1alpha4
@@ -127,7 +127,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.4/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.0}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.0}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.0}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -136,7 +136,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -145,7 +145,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -154,7 +154,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -163,7 +163,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.7/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.8}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.8}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.8}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -183,7 +183,7 @@ providers:
 - name: kubeadm
   type: ControlPlaneProvider
   versions:
-  - name: "{go://sigs.k8s.io/cluster-api@v0.3}" # latest published release in the v1alpha3 series; this is used for v1alpha3 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.3}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.3}/control-plane-components.yaml"
     type: "url"
     contract: v1alpha3
@@ -192,7 +192,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.3/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v0.4}" # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.4}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.4}/control-plane-components.yaml"
     type: "url"
     contract: v1alpha4
@@ -201,7 +201,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v0.4/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.0}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.0}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.0}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -210,7 +210,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -219,7 +219,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -228,7 +228,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -237,7 +237,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.7/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.8}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.8}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.8}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -257,7 +257,7 @@ providers:
 - name: docker
   type: InfrastructureProvider
   versions:
-  - name: "{go://sigs.k8s.io/cluster-api@v0.3}" # latest published release in the v1alpha3 series; this is used for v1alpha3 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.3}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.3}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1alpha3
@@ -267,7 +267,7 @@ providers:
     files:
     - sourcePath: "../data/shared/v0.3/metadata.yaml"
     - sourcePath: "../data/infrastructure-docker/v0.3/cluster-template.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v0.4}" # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v0.4}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v0.4}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1alpha4
@@ -277,7 +277,7 @@ providers:
     files:
     - sourcePath: "../data/shared/v0.4/metadata.yaml"
     - sourcePath: "../data/infrastructure-docker/v0.4/cluster-template.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.0}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.0}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.0}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -287,7 +287,7 @@ providers:
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.0/cluster-template.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -299,7 +299,7 @@ providers:
     - sourcePath: "../data/infrastructure-docker/v1.5/cluster-template.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.5/cluster-template-topology.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.5/clusterclass-quick-start.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -311,7 +311,7 @@ providers:
     - sourcePath: "../data/infrastructure-docker/v1.6/cluster-template.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.6/cluster-template-topology.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.6/clusterclass-quick-start.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -323,7 +323,7 @@ providers:
     - sourcePath: "../data/infrastructure-docker/v1.7/cluster-template.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.7/cluster-template-topology.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.7/clusterclass-quick-start.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.8}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.8}"
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.8}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
