cluster.status.conditions.reason may indeed be empty
regenerate CRDs

🌱 test: improve autoscale tests for to/from zero and running autoscaler in bootstrap cluster (#11082)

* test: allow deploying autoscaler to management cluster

* test: make machine pools optional in autoscaler test

* test: implement optional scale from/to zero tests for autoscale

* test: allow modification of apigroup for infrastructure

* test: wait for rollouts to finish in autoscaler tests

* test: drop cleaning up autoscaler for machine pools

* review fix

* add comment about AutoScaleFromZero

* remove autoscale from zero test for unsupported MachinePools

* review fixes

update cert-manager to 1.15.3

Signed-off-by: Troy Connor <troy0820@users.noreply.github.com>

Collect additional logs with CAPD log collector

Signed-off-by: Alexandr Demicev <alexandr.demicev@suse.com>

:seedling: Bump tj-actions/changed-files in the all-github-actions group

Bumps the all-github-actions group with 1 update: [tj-actions/changed-files](https://github.com/tj-actions/changed-files).

Updates `tj-actions/changed-files` from 44.5.7 to 45.0.0
- [Release notes](https://github.com/tj-actions/changed-files/releases)
- [Changelog](https://github.com/tj-actions/changed-files/blob/main/HISTORY.md)
- [Commits](https://github.com/tj-actions/changed-files/compare/c65cd883420fd2eb864698a825fc4162dd94482c...40853de9f8ce2d6cfdc73c1b96f14e22ba44aec4)

---
updated-dependencies:
- dependency-name: tj-actions/changed-files
  dependency-type: direct:production
  update-type: version-update:semver-major
  dependency-group: all-github-actions
...

Signed-off-by: dependabot[bot] <support@github.com>

:seedling: Bump google.golang.org/api

Bumps the all-go-mod-patch-and-minor group with 1 update in the /hack/tools directory: [google.golang.org/api](https://github.com/googleapis/google-api-go-client).

Updates `google.golang.org/api` from 0.193.0 to 0.194.0
- [Release notes](https://github.com/googleapis/google-api-go-client/rele

--- a/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
+++ b/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
@@ -92,7 +92,7 @@ spec:
                       description: |-
                         The reason for the condition's last transition in CamelCase.
                         The specific API may choose whether or not this field is considered a guaranteed API.
-                        This field may not be empty.
+                        This field may be empty.
                       type: string
                     severity:
                       description: |-
