--- a/config/metrics/crd-metrics-config.yaml
+++ b/config/metrics/crd-metrics-config.yaml
@@ -64,6 +64,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a clusterclass.
@@ -79,6 +80,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -175,6 +177,7 @@ spec:
           path:
           - status
           - phase
+          nilIsZero: true
         type: StateSet
     - name: created
       help: Unix creation timestamp.
@@ -212,6 +215,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a cluster.
@@ -227,6 +231,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
   - groupVersionKind:
       group: controlplane.cluster.x-k8s.io
@@ -348,6 +353,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a kubeadmcontrolplane.
@@ -363,6 +369,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -447,6 +454,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a kubeadmconfig.
@@ -462,6 +470,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -609,6 +618,7 @@ spec:
           path:
           - status
           - phase
+          nilIsZero: true
         type: StateSet
     - name: created
       help: Unix creation timestamp.
@@ -646,6 +656,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a machine.
@@ -661,6 +672,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -868,6 +880,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a machinedeployment.
@@ -883,6 +896,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -937,6 +951,7 @@ spec:
           path:
           - status
           - currentHealthy
+          nilIsZero: true
         type: Gauge
     - name: status_expected_machines
       help: Total number of pods counted by this machinehealthcheck.
@@ -945,6 +960,7 @@ spec:
           path:
           - status
           - expectedMachines
+          nilIsZero: true
         type: Gauge
     - name: status_remediations_allowed
       help: Number of machine remediations that are currently allowed.
@@ -953,6 +969,7 @@ spec:
           path:
           - status
           - remediationsAllowed
+          nilIsZero: true
         type: Gauge
     - name: created
       help: Unix creation timestamp.
@@ -990,6 +1007,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a machinehealthcheck.
@@ -1005,6 +1023,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -1104,6 +1123,7 @@ spec:
           path:
           - status
           - fullyLabeledReplicas
+          nilIsZero: true
         type: Gauge
     - name: status_replicas_ready
       help: The number of ready replicas per machineset.
@@ -1159,6 +1179,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a machineset.
@@ -1174,6 +1195,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
@@ -1310,6 +1332,7 @@ spec:
           path:
           - status
           - phase
+          nilIsZero: true
         type: StateSet
     - name: created
       help: Unix creation timestamp.
@@ -1347,6 +1370,7 @@ spec:
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a machinepool.
@@ -1362,6 +1386,7 @@ spec:
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
     - name: owner
       help: Owner references.
