--- a/config/metrics/templates/common_metrics.yaml
+++ b/config/metrics/templates/common_metrics.yaml
@@ -34,6 +34,7 @@
           - conditions
           valueFrom:
           - status
+          nilIsZero: true
         type: StateSet
     - name: status_condition_last_transition_time
       help: The condition last transition time of a ${RESOURCE}.
@@ -49,4 +50,5 @@
           - conditions
           valueFrom:
           - lastTransitionTime
+          nilIsZero: true
         type: Gauge
