--- a/config/metrics/templates/machineset.yaml
+++ b/config/metrics/templates/machineset.yaml
@@ -79,6 +79,7 @@
           path:
           - status
           - fullyLabeledReplicas
+          nilIsZero: true
         type: Gauge
     - name: status_replicas_ready
       help: The number of ready replicas per machineset.
