re-add /finalizers subresource RBAC
Update permissions on /finalizers subresrouce is required on managment clusters with 'OwnerReferencesPermissionEnforcement' plugin enabled.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -27,6 +27,7 @@ rules:
 - apiGroups:
   - addons.cluster.x-k8s.io
   resources:
+  - clusterresourcesets/finalizers
   - clusterresourcesets/status
   verbs:
   - get
@@ -112,6 +113,18 @@ rules:
   - cluster.x-k8s.io
   resources:
   - clusters
+  - clusters/finalizers
+  - clusters/status
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - clusters
   - clusters/status
   verbs:
   - get
@@ -135,6 +148,18 @@ rules:
   - cluster.x-k8s.io
   resources:
   - machinedeployments
+  - machinedeployments/finalizers
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machinedeployments
+  - machinedeployments/finalizers
   - machinedeployments/status
   verbs:
   - create
@@ -160,6 +185,7 @@ rules:
   - cluster.x-k8s.io
   resources:
   - machinehealthchecks
+  - machinehealthchecks/finalizers
   - machinehealthchecks/status
   verbs:
   - get
@@ -183,7 +209,22 @@ rules:
   - cluster.x-k8s.io
   resources:
   - machinepools
+  - machinepools/finalizers
   - machinepools/status
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machines
+  - machines/finalizers
+  - machines/status
   verbs:
   - create
   - delete
@@ -198,17 +239,23 @@ rules:
   - machines
   - machines/status
   verbs:
-  - create
   - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - cluster.x-k8s.io
   resources:
   - machinesets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machinesets
+  - machinesets/finalizers
   verbs:
   - get
   - list
@@ -219,6 +266,7 @@ rules:
   - cluster.x-k8s.io
   resources:
   - machinesets
+  - machinesets/finalizers
   - machinesets/status
   verbs:
   - create
