--- a/test/infrastructure/docker/config/rbac/role.yaml
+++ b/test/infrastructure/docker/config/rbac/role.yaml
@@ -75,6 +75,7 @@ rules:
 - apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
+  - dockerclusters/finalizers
   - dockerclusters/status
   verbs:
   - get
@@ -95,6 +96,7 @@ rules:
 - apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
+  - dockermachinepools/finalizers
   - dockermachinepools/status
   verbs:
   - get
@@ -115,6 +117,7 @@ rules:
 - apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
+  - dockermachines/finalizers
   - dockermachines/status
   verbs:
   - get
