--- a/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanetemplates.yaml
+++ b/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanetemplates.yaml
@@ -2926,6 +2926,25 @@ spec:
                             format: int32
                             type: integer
                         type: object
+                      machineNamingStrategy:
+                        description: |-
+                          MachineNamingStrategy allows changing the naming pattern used when creating Machines.
+                          InfraMachines & KubeadmConfigs will use the same name as the corresponding Machines.
+                        properties:
+                          template:
+                            description: |-
+                              Template defines the template to use for generating the names of the Machine objects.
+                              If not defined, it will fallback to `{{ .kubeadmControlPlane.name }}-{{ .random }}`.
+                              If the generated name string exceeds 63 characters, it will be trimmed to 58 characters and will
+                              get concatenated with a random suffix of length 5.
+                              Length of the template string must not exceed 256 characters.
+                              The template allows the following variables `.cluster.name`, `.kubeadmControlPlane.name` and `.random`.
+                              The variable `.cluster.name` retrieves the name of the cluster object that owns the Machines being created.
+                              The variable `.kubeadmControlPlane.name` retrieves the name of the KubeadmControlPlane object that owns the Machines being created.
+                              The variable `.random` is substituted with random alphanumeric string, without vowels, of length 5.
+                            maxLength: 256
+                            type: string
+                        type: object
                       machineTemplate:
                         description: |-
                           MachineTemplate contains information about how machines
