Improve disabling of rules

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,11 +55,9 @@ linters:
     - whitespace # unnecessary newlines
 
 linters-settings:
-  govet:
-    disable:
-      - printf
   gosec:
     excludes:
+    # integer overflow conversion int -> int32
       - G115
   gci:
     sections:
@@ -354,6 +352,10 @@ issues:
     - gocritic
     text: "deferInLoop: Possible resource leak, 'defer' is called in the 'for' loop"
     path: _test\.go
+    # Ignore non-constant format string in call to condition utils
+  - linters:
+      - govet
+    text: "non-constant format string in call to sigs\\.k8s\\.io\\/cluster-api\\/util\\/conditions\\."
   exclude-files:
     - "zz_generated.*\\.go$"
     - "vendored_openapi\\.go$"
