Add NamingStrategy to MachineDeployment
Signed-off-by: Muhammad Adil Ghaffar <muhammad.adil.ghaffar@est.tech>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -173,6 +173,8 @@ linters-settings:
       # CAPI utils
       - pkg: sigs.k8s.io/cluster-api/util/conditions/v1beta2
         alias: v1beta2conditions
+      - pkg: sigs.k8s.io/cluster-api/internal/topology/names
+        alias: topologynames
       # CAPD
       - pkg: sigs.k8s.io/cluster-api/test/infrastructure/docker/api/v1alpha3
         alias: infrav1alpha3
