--- a/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
+++ b/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
@@ -4192,7 +4192,7 @@ spec:
                 properties:
                   template:
                     description: |-
-                      Template defines the template to use for generating the names of the Machine objects.
+                      template defines the template to use for generating the names of the Machine objects.
                       If not defined, it will fallback to `{{ .kubeadmControlPlane.name }}-{{ .random }}`.
                       If the generated name string exceeds 63 characters, it will be trimmed to 58 characters and will
                       get concatenated with a random suffix of length 5.
@@ -4200,7 +4200,8 @@ spec:
                       The template allows the following variables `.cluster.name`, `.kubeadmControlPlane.name` and `.random`.
                       The variable `.cluster.name` retrieves the name of the cluster object that owns the Machines being created.
                       The variable `.kubeadmControlPlane.name` retrieves the name of the KubeadmControlPlane object that owns the Machines being created.
-                      The variable `.random` is substituted with random alphanumeric string, without vowels, of length 5.
+                      The variable `.random` is substituted with random alphanumeric string, without vowels, of length 5. This variable is required
+                      part of the template. If not provided, validation will fail.
                     maxLength: 256
                     type: string
                 type: object
