🌱 replace kubebuilder-release-tools with new workflow (#11062)
* replace verify pr from kubebuilder-release-tools

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* use github script to show the user a meaningful description

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* improve workflow

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* fix: workflow

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* change permission

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* cleanup workflow

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* delete gh comment flow

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* combine jobs into one

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* move the workflow step into script

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* composite condition

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* pass the title as a string

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* delete env

---------

Signed-off-by: sivchari <shibuuuu5@gmail.com>

--- a/.github/workflows/pr-verify.yaml
+++ b/.github/workflows/pr-verify.yaml
@@ -1,19 +1,16 @@
-name: PR verify
+name: PR title verifier
 
 on:
   pull_request_target:
     types: [opened, edited, synchronize, reopened]
 
-permissions:
-  checks: write # Allow access to checks to write check runs.
-
 jobs:
   verify:
     runs-on: ubuntu-latest
-    name: verify PR contents
+
     steps:
-    - name: Verifier action
-      id: verifier
-      uses: kubernetes-sigs/kubebuilder-release-tools@012269a88fa4c034a0acf1ba84c26b195c0dbab4 # tag=v0.4.3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # tag=v4.1.7
+
+      - name: Check if PR title is valid
+        run: sh hack/verify-pr-title.sh "${{ github.event.pull_request.title }}"
+
