🌱 test: add PreWaitForControlplaneToBeUpgraded to ClusterUpgradeConformanceSpec (#11145)
* test: add PreWaitForControlplaneToBeUpgraded to ClusterUpgradeConformanceSpec

* test: add template for kcp-pre-drain

* test: adjust multi-controlplane quickstart test to check for all nodes and kube-proxy being healthy via a pre-drain hook

* lint fix

* Review fixes

* review fixes

* review fixes

* review fix

--- a/test/e2e/config/docker.yaml
+++ b/test/e2e/config/docker.yaml
@@ -309,6 +309,7 @@ providers:
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-kcp-adoption.yaml"
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-machine-pool.yaml"
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-node-drain.yaml"
+    - sourcePath: "../data/infrastructure-docker/main/cluster-template-kcp-pre-drain.yaml"
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-upgrades.yaml"
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-upgrades-runtimesdk.yaml"
     - sourcePath: "../data/infrastructure-docker/main/cluster-template-kcp-scale-in.yaml"
