--- a/config/crd/bases/cluster.x-k8s.io_machines.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machines.yaml
@@ -1115,23 +1115,23 @@ spec:
                 type: array
               deletion:
                 description: |-
-                  Deletion contains information relating to removal of the Machine.
-                  Only present when the Machine has a deletionTimestamp and is being removed from the cluster.
+                  deletion contains information relating to removal of the Machine.
+                  Only present when the Machine has a deletionTimestamp and drain or wait for volume detach started.
                 properties:
                   nodeDrainStartTime:
                     description: |-
-                      NodeDrainStartTime is the time when the drain of the node started.
-                      Only present when the Machine has a deletionTimestamp, is being removed from the cluster
-                      and draining the node had been started.
+                      nodeDrainStartTime is the time when the drain of the node started and is used to determine
+                      if the NodeDrainTimeout is exceeded.
+                      Only present when the Machine has a deletionTimestamp and draining the node had been started.
                     format: date-time
                     type: string
-                  nodeVolumeDetachStartTime:
+                  waitForNodeVolumeDetachStartTime:
                     description: |-
-                      WaitForNodeVolumeDetachStartTime is the time when waiting for volume detachment started.
+                      waitForNodeVolumeDetachStartTime is the time when waiting for volume detachment started
+                      and is used to determine if the NodeVolumeDetachTimeout is exceeded.
                       Detaching volumes from nodes is usually done by CSI implementations and the current state
                       is observed from the node's `.Status.VolumesAttached` field.
-                      Only present when the Machine has a deletionTimestamp, is being removed from the cluster
-                      and waiting for volume detachments had been started.
+                      Only present when the Machine has a deletionTimestamp and waiting for volume detachments had been started.
                     format: date-time
                     type: string
                 type: object
