fix kcp-only clusterclass

--- a/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start-kcp-only/kustomization.yaml
+++ b/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start-kcp-only/kustomization.yaml
@@ -12,3 +12,8 @@ patches:
     group: cluster.x-k8s.io
     version: v1beta1
     kind: ClusterClass
+- path: remove-worker-patches.yaml
+  target:
+    group: cluster.x-k8s.io
+    version: v1beta1
+    kind: ClusterClass
